[package]
name = "hello-world-http"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny_http = "0.12"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Use a single codegen unit
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

